k8s/frontend-service.yaml
apiVersion: v1
kind: Service

metadata:
  name: ai-document-frontend

spec:
  selector:
    app: ai-document-frontend

  ports:
    - protocol: TCP
      port: 80
      targetPort: 80

  type: NodePort
